[package]
name = "discord-gateway-router"
version = "0.1.0"
edition = "2024"

[dependencies]
serenity = "0.12"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }

[dependencies.serenity]
default-features = false
features = [
    "client",
    "gateway",
    "rustls_backend",
]
version = "0.12"
